2015-02-24  Levente Mészáros

	Added new SI bps prefixes.

2015-02-25  Benjamin Seregi & Levente Mészáros

	Refactored BitVector classes.

2015-01-21  Irene Ruengeler & Zoltan Bojthe

	Fixed defects found by static code analyzer (Coverity).

2015-01-21  Zoltan Bojthe

	Applied C++ source code modernizer.

2015-01-09  Irene Rüngeler

	Allow flushing the pcapFile after each write to ensure that all packets are
	captured in case of a crash

2014-12-10  Levente Mészáros

	Removed obsolete and unpredictable findModuleWherever* and ModuleAccess class.

2014-12-04  Florian Meier

	Added Group count result recorder to counts the occurrences of signals with
	the same attribute. Can for example be used to count the number of packets
	received per source.

2014-12-04  Florian Meier

	Added ResultFilter for source address.

2014-11-18  Zoltan Bojthe & Levente Mészáros

	Fixed memory management problems found by valgrind memcheck.

2014-11-19  Levente Mészáros

	Added IntervalTree cache for efficiently computing intersecting intervals.

2015-02-25  Benjamin Seregi

	Added a Complex number implementation.

2014-11-07  ------ inet-2.99.0 released ------

2014-07-30  Andras Varga

	Changes on the inet-3.x branch so far:

	Code formatting (Zoltan Bojthe)
	- using uncrustify, see _scripts/reformat/*
	- common style for header guards

	Namespace (Zoltan Bojthe, Zsolt Prontvai)
	- code has been moved into the inet namespace

	Init stages (Zoltan Bojthe, Andras Varga)
	- init stages: reorganized by layers

	Signals (Zoltan Bojthe)
	- replace INotifiable and NotificationBoard by signals for
	  publish/subscribe communication

	Logging (Zoltan Bojthe, Benjamin Seregi)
	- EV log statements revised and categorized: EV_ERROR, EV_WARN,
	  EV_INFO, EV_DETAIL, EV_DEBUG, EV_TRACE

2013-07-25  ====== inet-3.x development started (integration branch) ======

2015-03-04  ------ inet-2.6 released ------

2014-11-07  ------ inet-2.5.1 released ------

2014-10-29  ------ inet-2.5.0 released ------
