@@ -25,7 +25,7 @@
 
 namespace inet {
 
-//TODO need solution for fragments with encapsulated ByteArrayMessage contains bytes of fragment or bytes of total packet
+//TODO need solution for fragments with encapsulated RawPacket contains bytes of fragment or bytes of total packet
 
 IPv4FragBuf::IPv4FragBuf()
 {
